  return fewer bytes than the first one and the archive has not yet been
  processed completely. This condition was previously not detected in the
  rare case where the previous contents of the input buffer accidentally
  formed a valid continuation of the archive.
* shl: The external 'ps' command is now used for the 'layers -l' command.

Release 050411
* diff: The -p option (print name of surrounding C function) has been added.
* diff: The -X option (ignore patterns from file) has been added.
* diff: The combination of the -h and -r options works again.
* ps: Some values (e.g. LTIME) were determined incorrectly with the -L option
  on Linux systems.
* /usr/ucb/ps: Specifying -agx now has the same effect as specifying -ax.
* Operate correctly if stat(2) returns a zero st_blksize field. This is the
  case for the write side of pipes on NetBSD 2.0 and resulted in no output
  when using tar to write to them.
* sed: Handle a byte with the same value as the ASCII backslash at the second
  or a following position of a multibyte sequence correctly with the 'a', 'c',
  and 'i' commands.
* ls: If the target file name contained in a symbolic link is empty, print
  nothing (instead of "?") with the -l option etc.
* df: Specifying the name of a mounted device as argument works again.
* ln: When the existing file is a symbolic link, its target file is now hard
  linked with the SVID4 and POSIX versions.
* cpio: Print information about hard links with the -iv options.
* cpio: If link() fails, no separate copy of an archive entry is created.
* It is now possible to use hard links between installed files. The symbolic
  links which are used by default are shorter now.

Release 050309
* find: The -anewer and -cnewer primaries were introduced.
* ps: The /usr/ucb version now uses eight columns for the USER field as the
  historic versions do (Bugreport by Matthew Fischer).
* od: When the -C option was used with an empty input file, a division by