@@ -1,5 +1,5 @@
 .\"
-.\" Sccsid @(#)cp.1	1.25 (gritter) 2/28/05
+.\" Sccsid @(#)cp.1	1.26 (gritter) 5/3/05
 .\" Parts taken from cp(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,12 +32,12 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH CP 1 "2/28/05" "Heirloom Toolchest" "User Commands"
+.TH CP 1 "5/3/05" "Heirloom Toolchest" "User Commands"
 .SH NAME
 cp \- copy files
 .SH SYNOPSIS
 \fBcp\fR
-[\fB\-dDfiHLpPrRs\fR] [\fB\-b\ \fIsize\fR]
+[\fB\-adDfiHLpPrRs\fR] [\fB\-b\ \fIsize\fR]
 \fIfile1\fR [\fIfile2\fR .\ .\ .\ ] \fItarget\fR
 .SH DESCRIPTION
 .I File1
@@ -143,6 +143,13 @@ With the
 option, do not follow any symbolic links.
 .PP
 The following options are extensions:
+.TP
+.B \-a
+Perform a recursive copy and, if possible,
+preserve hard links as well as any attributes.
+This is the same as the combination of the
+.I \-Rdp
+options.
 .TP
 \fB\-b\ \fIsize\fR
 With this option given,
